2009-05-21  vadim  <vadim@vk.crocodile.org>

	* ProjectPanel_file_ops.cpp (ProjectPanel::fileOpen): (finally)
	fixed the algorithm used to determine directory offered to the
	user when they use main menu File/Open to open a file:
	  1) if "work directory" is configured in preferences, always use
	  it first;
	  2) if it is blank, use the same directory where currently opened
	  file is located;
	  3) if this is the first file to be opened, use the same
	  directory user used last time they ran the program (saved in user
	  settings).

	* RuleSetView.cpp (RuleSetView::pasteObject): fixed bug #2794827
	"crash when pasting from a Library in a another file". The GUI
	crashed if user tried to copy/paste an object from one data file
	into a rule in another.

2009-05-20  vadim  <vadim@vk.crocodile.org>

	* ObjectEditor.cpp (ObjectEditor::help): Added support for the
	built-in help page for all objects dialogs, including rule
	actions and options dialog. Implemented help pages for actions
	"Route", "Branch", "Tag", "Classify" and rule options dialogs for
	iptables and pf. Button "Help" is greyed out if corresponding help
	page is unavailable.

	* RuleSetView.cpp (RuleSetView::switchObjectInEditor): fixed bug
	#2794484 "Crash after click in the "Options" col of rule group
	title".

2009-05-16  vadim  <vadim@vk.crocodile.org>

	* PolicyCompiler_ipt.cpp (checkInterfaceAgainstAddressFamily::processNext):
	fixed bug #2792888: "interface with only v4 address is used in v6
	rules". Compiler should drop rule if it is associate with an
	interface that does not have address that belongs to the address
	family declared for the rule set. If interface has only ipv4
	address, it will never see ipv6 packets and therefore rules that
	have this interface in the "interface" rule element should not be
	included in the output generated for the ipv6 or combined
	ipv4+ipv6 rule sets.

2009-05-14  vadim  <vadim@vk.crocodile.org>

	* PolicyCompiler_pf.cpp (fillDirection::processNext): fixed bug