@@ -1,3 +1,13 @@
+2009-05-27  vadim  <vadim@vk.crocodile.org>
+
+	* PolicyCompiler_pf_writers.cpp (PrintRule::_printAddr): fixed
+	bug (no #): policy compiler for pf crashed when dynamic interface
+	was used in source or destination of a policy rule.
+
+	* ObjectManipulator.cpp (ObjectManipulator::contextMenuRequested):
+	fixed bug #2793144 "Context menu item for the new User Service
+	object is missing".
+
 2009-05-21  vadim  <vadim@vk.crocodile.org>
 
 	* ProjectPanel_file_ops.cpp (ProjectPanel::fileOpen): (finally)
